# patient-name-extractor

./: Dockerfile  README.md  main.py  name_extractor.py  pyproject.toml  schemas.py  utils.py
data/: sample_doc.json
tests/: test_api.py  test_name_extractor.py
